force-app/main/default/objects/TrackIT__Assignee__c/TrackIT__Assignee__c.object-meta.xml
<CustomObject>
    <description>Stores Assigned To user information in Facility Manager</description>
    <label>Assignee</label>
    <nameField>
        <label>Assignee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>