force-app/main/default/objects/TrackIT__Assignee__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Inventory Assignments to Jobs</relationshipLabel>
    <relationshipName>Job_Assignees</relationshipName>
    <type>Lookup</type>
</CustomField>