force-app/main/default/objects/TrackIT__Assignee__c/fields/TrackIT__Address__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>