force-app/main/default/objects/TrackIT__Assignee__c/fields/TrackIT__Assignee_Department__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Assignee_Department__c</fullName>
    <label>Assignee Department</label>
    <length>30</length>
    <type>Text</type>
</CustomField>