force-app/main/default/objects/TrackIT__Assignee__c/fields/TrackIT__Assignee_Email__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Assignee_Email__c</fullName>
    <label>Assignee Email</label>
    <type>Email</type>
</CustomField>