force-app/main/default/objects/TrackIT__Assignee__c/fields/TrackIT__Assignee_Image__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Assignee_Image__c</fullName>
    <label>Assignee Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>