force-app/main/default/objects/TrackIT__Assignee__c/fields/TrackIT__Assignee_Phone__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Assignee_Phone__c</fullName>
    <label>Assignee Phone</label>
    <type>Phone</type>
</CustomField>