force-app/main/default/objects/TrackIT__Assignee__c/fields/TrackIT__Company__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Company__c</fullName>
    <label>Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>