force-app/main/default/objects/TrackIT__Assignee__c/validationRules/TrackIT__Assignee_ID_Change_After_Creation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackIT__Assignee_ID_Change_After_Creation_Rule</fullName>
    <active>true</active>
    <description>Prevents users from changing an assignee ID after the assignee is initially entered.</description>
    <errorConditionFormula>IF(ISNULL( PRIORVALUE( Name )),FALSE,ISCHANGED( Name ) )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Assignee Name cannot be changed after initial creation. Please contact your System Administrator to change the Assignee Name after the initial Assignee is created.</errorMessage>
</ValidationRule>