force-app/main/default/objects/TrackIT__Assignee__c/listViews/TrackIT__All.listView-meta.xml
<ListView>
    <fullName>TrackIT__All</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Assignee_Phone__c</columns>
    <columns>TrackIT__Assignee_Email__c</columns>
    <columns>TrackIT__Assignee_Department__c</columns>
    <columns>TrackIT__Company__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>